# NetworkAssistantTerminal-MVP

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  chat.py  cli.py  command_policy.py  config.py  database.py  llm_policy.py  models.py  release.py  reporting.py  safety.py  schemas.py  server.py
docs/: AGENT_MODE.md  CHANGE_WORKFLOW.md  INTEGRATION_TESTING.md  LAB_VALIDATION.md  PLUGIN_TOOLS.md  RELEASE_CHECKLIST.md  SAFETY_MODEL.md  SKILL_REGISTRY.md  SUPPORTED_OPERATIONS.md  TOOL_CAPABILITY_INDEX.md  TROUBLESHOOTING.md  USER_GUIDE.md  V1_RELEASE_NOTES.md
network_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skills/: README.md  cisco_operations.skill.md  custom_plans.skill.md  diagnostics.skill.md  knowledge_rag.skill.md  lab_release.skill.md  mikrotik_operations.skill.md  network_scanning.skill.md  nmap_scanning.skill.md  plugin_factory.skill.md  router_connection.skill.md  safety_policy.skill.md  snapshots_backup.skill.md  ssh_readonly_collection.skill.md  topology.skill.md  troubleshooting.skill.md
tests/: test_agent_blocked_actions.py  test_agent_dry_policy.py  test_agent_help_fallback.py  test_agent_intent_parser.py  test_agent_logging.py  test_agent_network_fact_routing.py  test_agent_policy.py  test_agent_session_memory.py  test_agent_tool_selection.py  test_agent_unsafe_requests.py  test_agent_workflows.py  test_cache_friendly_prompt.py  test_chat_router_safety.py  test_cisco_interface_agent_routes.py  test_cisco_interface_execution_validators.py  test_command_policy.py  (+69 more)
(+58 files in other folders)
